--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </nav>
   <main id="home">
     <picture>
-      <img src="images/_MGL5316.JPG" alt="Joseph Gaunt Image">
+      <img src="images/joseph.JPG" alt="Joseph Gaunt Image">
     </picture>
     <section>
       <h1>About Me</h1>
